THRIFT-3273 c_glib: Generated code tries to convert between function and void pointers Client: c_glib Patch: Simon South <ssouth@simonsouth.com>

This closes #568